[package]
name = "rust-calcs2"
version = "0.1.0"
authors = ["Tyler <tylergross28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
js-sys = "0.3"