[package]
name = "rust-calcs2"
version = "0.1.0"
authors = ["Tyler <tylergross28@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
serde-wasm-bindgen = { version = "0.1" }
console_error_panic_hook = { version = "0.1" }
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
